	* enabled unit-test ags_input_test.c because not tested
	* new unit-test ags_midiin_test.c
	* new unit-test ags_output_test.c
	* new unit-test ags_playback_domain_test.c
	* new unit-test ags_playback_test.c
	* new unit-test ags_preset_test.c
	* new unit-test ags_recall_channel_test.c
	* new unit-test ags_recall_channel_run_test.c
	* new unit-test ags_recall_container_test.c

ags (0.9.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented pass base-note to AgsApplySynth
	* fixed missing base-note, audio-loop-start and audio-loop-end while read/write XML
	* fixed missing attack as calculating stream size
	* fixed ags_synth_util_get_xcross_count() and related functions

ags (0.9.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_lv2_option_manager_lookup_extended()
	* implemented ags_lv2_plugin_event_buffer_alloc()
	* implemented ags_lv2_plugin_event_buffer_realloc_data()
	* implemented ags_lv2_plugin_event_buffer_concat()
	* implemented ags_synth_util_get_xcross_count() and related type specific implementations
	* implemented ags_synth_generator_compute()
	* implemented ags_synth_generator_compute_with_audio_signal()
	* deprecated ags_lv2_plugin_alloc_event_buffer()
	* deprecated ags_lv2_plugin_concat_event_buffer()
	* implemented ags_lv2_urid_manager_unmap()
	* implemented AgsSyncsynth in order to have true notation available to a synth
	* implemented ags_synth_generator_compute()
	* implemented ags_synth_generator_compute_with_audio_signal()
	* refactored AgsOscillator in order to be reusable
	* refactored AgsApplySynth task to use new synth generator functions
	* completed missing gtk-doc comments in ags_input.c and other files
	* fixed AgsExportSoundcard to don't add device as being NULL
	* fixed ags_lv2_option_manager_get_option() to lookup correctly
	* fixed ags_lv2_option_manager_set_option() to lookup correctly
	* new unit-test ags_lv2_option_manager_test.c
	* new unit-test ags_lv2_plugin_test.c