@@ -14,6 +14,7 @@ ags (0.9.9)
 	* new unit-test ags_recall_channel_test.c
 	* new unit-test ags_recall_channel_run_test.c
 	* new unit-test ags_recall_container_test.c
+	* new unit-test ags_recall_dependency_test.c
 
 ags (0.9.8)
 
